--- a/settings.json
+++ b/settings.json
@@ -3,14 +3,14 @@
 "autoplaymusic": false,
 "autocomposing": false,
 "autorecording": false,
-"NamaBot":"Kurz Bot Assistan", 
-"ownerNumber": "6281220670449@s.whatsapp.net",
-"NomorOwner":"6281220670449", 
-"NomorOwner2":"+62 812-2067-0449", 
-"NamaOwner":"Lord KURRXDゑ", 
-"Dana":"081220670449", 
-"Pulsa":"081220670449", 
-"Gopay":"082298891772", 
+"NamaBot":"Penjinak Kemem", 
+"ownerNumber": "62858800040578@s.whatsapp.net",
+"NomorOwner":"62858800040578", 
+"NomorOwner2":"+62 858-8000-4057", 
+"NamaOwner":"Happying Rifkyゑ", 
+"Dana":"6285880004057", 
+"Pulsa":"6285880004057", 
+"Gopay":"6285880004057", 
 "lolkey":"LOLKONTOL09",
 "gcount": 20
 }
